syntax = "proto3";
package syft.core.common;

import "proto/core/common/common_object.proto";

message PythonPrimitive {
  syft.core.common.UID id = 1;
  string obj_type = 2;
  string content = 3;
}
